# RACER-PX4-gazebo

./: .gitignore  README.md  racer_start.sh
assets/launch/: indoor31.launch
assets/worlds/: indoor32.world
src/px4_gazebo_racer/RACER/swarm_exploration/exploration_manager/config/: swarm.rviz
src/px4_gazebo_racer/RACER/swarm_exploration/exploration_manager/launch/: single_drone_exploration.xml  single_drone_planner.xml  swarm_exploration.launch
src/px4_gazebo_racer/RACER/swarm_exploration/exploration_manager/src/: fast_exploration_fsm.cpp
src/px4_gazebo_racer/RACER/swarm_exploration/plan_manage/test/: process_msg.cpp
src/px4_gazebo_racer/control/: CMakeLists.txt
src/px4_gazebo_racer/control/src/: control_iris0.cpp  control_iris1.cpp  control_iris2.cpp  control_iris3.cpp
src/px4_gazebo_racer/px4ctrl/config/: ctrl_param_fpv copy.yaml  ctrl_param_fpv.yaml
src/px4_gazebo_racer/px4ctrl/launch/: multi_px4ctrl.launch  singl_run.launch  takeoff.sh
src/px4_gazebo_racer/px4ctrl/src/: PX4CtrlParam.cpp
src/px4_gazebo_racer/racer_bringup/: CMakeLists.txt  package.xml
src/px4_gazebo_racer/racer_bringup/launch/: indoor31.launch
src/px4_gazebo_racer/racer_bringup/worlds/: indoor32.world
src/px4_gazebo_racer/scripts/: gazebo_odom_pub.py  get_local_pose.py  get_local_pose_new.py  unlock.py  unlock_1.py  unlock_multi.py
